<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shorcial</string>

    <string name="server_ip">http://ec2-54-72-133-37.eu-west-1.compute.amazonaws.com</string>
    <string name="server_port">1479</string>

    <string name="clientid_imgur">e29cd388bb8b764</string>
    <string name="clientsecret_imgur">4e46a425b115cae945d7f0f5d3944660599d764c</string>

    <string name="title_activity_inicio">Shorcial</string>
    <string name="title_section_mis_datos">My Data</string>
    <string name="title_section_playas_cercanas">Nearby Beaches</string>
    <string name="title_section_mapa_playas">Map</string>
    <string name="title_activity_edicion">Edit Beach</string>
    <string name="title_activity_valoracion">Rate Beach</string>
    <string name="title_activity_mensaje_botella">Message in a Bottle</string>
    <string name="title_activity_mensajes_botellas">Messages in a Bottle</string>
    <string name="title_section_edit_infoplaya">Information</string>
    <string name="title_section_edit_mapplaya">Location</string>
    <string name="title_section_search_beach">Search for Beach</string>
    <string name="title_section_results_search_beach">Search Results</string>
    <string name="title_section_see_beach">Info</string>
    <string name="title_section_webcam_beach">See Live</string>
    <string name="title_section_opinion_beach">Rating</string>
    <string name="title_section_descubre_beach">Find Out</string>

    <string name="nuevo">New Beach</string>
    <string name="save">Save</string>
    <string name="refresh">Update</string>
    <string name="inform">Report Wrong Beach</string>
    <string name="search">Search</string>
    <string name="update_image">Update Image</string>
    <string name="nueva_valoracion">New Rating</string>

    <string name="grados_centigrados">ºC</string>

    <string name="title_search_by_name">Search by Name</string>
    <string name="title_search_by_name_placeholder">Enter the Name of the Beach</string>
    <string name="title_search_by_address_placeholder">Enter Street or Click on the Map</string>
    <string name="title_search_by_address">Proximity Search for a Position</string>

    <string name="title_checkins">Checks in</string>
    <string name="last_checkins">Last Checks in</string>

    <string name="mostrar_ruta">How to Arrive to the Beach?</string>

    <string name="no_internet">None detected INTERNET CONNECTION, or that there is VERY WEAK.</string>

    <string name="app_id_facebook">333380730146158</string>
    <string name="app_key_google_apis_web">AIzaSyClBprsTLkbUoiFhHUtSLHpWt0GHc5vGF0</string>

    <!-- IVAN: AIzaSyA_PYveEBI_o0wGU85y4__BbSIKJLLqinc
         PACO: AIzaSyBBgC6pax3qlZDpHOqV1BArBgCLpN85TZs
     -->
    <string name="app_key_play_services">AIzaSyBBgC6pax3qlZDpHOqV1BArBgCLpN85TZs</string>


    <string name="title_beach">Beach Name</string>
    <string name="title_extras_beach">Beach properties</string>
    <string name="title_beach_placeholder">Enter the Name of the Beach</string>
    <string name="title_banderaazul">Does the Beach Have Blue Flag?</string>
    <string name="title_dificultadacceso">Difficulty of Access to the Beach</string>
    <string name="title_limpieza">The Cleaning of the Beach</string>
    <string name="title_tipodearena">Kind of sand</string>
    <string name="title_rompeolas">Does the Beach Have Breakwater?</string>
    <string name="title_hamacas">Does the Beach Have Hammocks?</string>
    <string name="title_sombrillas">Does the Beach Have Umbrellas?</string>
    <string name="title_chiringuitos">Does the Beach Have Bars?</string>
    <string name="title_duchas">Does the Beach Have Shower?</string>
    <string name="title_socorrista">Does the Beach Have Life Guard?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown">I don\'t know</string>
    <string name="indiferente">I don\'t care</string>

    <string name="easy">Easy</string>
    <string name="medium">Moderate</string>
    <string name="hard">Extreme</string>

    <string name="muylimpia">Very Clean</string>
    <string name="limpia">Clean</string>
    <string name="sucia">Dirty</string>

    <string name="negra">Dark</string>
    <string name="blanca">Light</string>
    <string name="rocas">Rocks</string>

    <string name="address_placeholder">Enter an Address</string>

    <string name="logout">Log out</string>

    <string name="esperar">Wait Please ...</string>
    <string name="procesando">Processing ...</string>

    <string name="puntuacion">Rate this Beach!</string>
    <string name="comentario">Comment this Beach!</string>
    <string name="enviar_comentario">Send Comment</string>
    <string name="enviar_mensaje">Throw a message!</string>
    <string name="mensaje_botella_title">Write your comment!</string>
    <string name="comment_beach_placeholder">Enter a new comment about the beach, in 190 characters or less ... </string>
    <string name="enviar_mensaje_aleatorio_checkbox">Send to a Random Beach</string>
    <string name="message_bottle_beach_placeholder">Write your message, we will keep it in a bottle so ... someone else can get it!</string>
    <string name="touch_reload">Tap to Reload</string>
    <string name="ver_mapa">Show it on Map</string>
    <string name="ver_lista">Show it on a List</string>


    <string name="question">\?</string>

    <string name="meters">m.</string>
    <string name="kilometers">km.</string>

    <string name="playacreada">The Beach has been added SUCCESSFULLY</string>
    <string name="playaeditada">The Beach Data have been modified SUCCESSFULLY</string>
    <string name="checkinexito">You have CHECKED IN SUCCESSFULLY!</string>
    <string name="checkinrepetido">You have already CHEKED IN in this BEACH today!</string>
    <string name="valoracionrepetida">You have already COMMENTED in this BEACH todady!</string>
    <string name="nocheckin">You have to be in the BEACH to CHECK IN!</string>
    <string name="nuevomensajebotella">The MESSAGE was thrown into the SEA in a BOTTLE!</string>
    <string name="nuevavaloracion">You commented BEACH SUCCESSFULLY!</string>

    <string name="peticionborrado">It has been reported SUCCESSFULLY that you consider the beach as INVALID!</string>

    <string name="no_checkins">You have NOT ​​CHECKS IN</string>
    <string name="primer_checkin">Explore a BEACH and CHECK IN there!</string>

    <string name="no_playas">There are NO beaches within 20 km.</string>

    <string name="no_busqueda">There are NO beaches with search criteria entered!</string>

    <string name="no_comentarios">There are NO REVIEWS yet</string>
    <string name="primer_comentario">Be the first to RATE!</string>
    <string name="no_mensajes">NOBODY has yet THROWN Messages in Bottles</string>
    <string name="existe_playa">There is a BEACH at the same LOCATION</string>

    <string name="primer_mensaje">Be the first to WRITE one!</string>
    <string name="no_gps">Could not detect GPS position, turn it on and try again!</string>

    <string name="error_problemautocompletado">ERROR in the address, enter a new one</string>
    <string name="error_localizacion">You must enter a valid LOCATION</string>
    <string name="error_nombre">Please INDICATE a valid NAME</string>
    <string name="error_bbdd">There was an ERROR saving in database, contact administrator</string>
    <string name="error_valoracion">You must SCORING to Beach at least</string>
    <string name="error_mensaje">You have to WRITE a MESSAGE if you want to SEND it!</string>
    <string name="error_search_name">You have to ENTER a NAME to search</string>
    <string name="error_search_address">You have to ENTER a ADDRESS to search</string>
    <string name="error_unknown">Unknown Error!, try again or contact administrator</string>

    <string name="info_banderaazul_si">The beach has BLUE FLAG</string>
    <string name="info_banderaazul_no">The beach does NOT have BLUE FLAG</string>

    <string name="info_acceso_extremo">The DIFFICULTY OF ACCESS to the beach is EXTREME</string>
    <string name="info_acceso_medio">The DIFFICULTY OF ACCESS to the beach is MODERATE</string>
    <string name="info_acceso_facil">The DIFFICULTY OF ACCESS to the beach is EASY</string>

    <string name="info_limpieza_alta">The Beach is VERY CLEAN</string>
    <string name="info_limpieza_media">The Beach is CLEAN</string>
    <string name="info_limpieza_baja">The Beach is DIRTY</string>

    <string name="info_arena_negra">The Beach has DARK SAND</string>
    <string name="info_arena_blanca">The Beach has LIGHT SAND</string>
    <string name="info_arena_roca">The Beach has ROCKS</string>

    <string name="info_hamacas_si">The Beach has HAMMOCKS</string>
    <string name="info_hamacas_no">The Beach does NOT have HAMMOCKS</string>

    <string name="info_chiringuitos_si">The Beach has BAR</string>
    <string name="info_chiringuitos_no">The Beach does NOT have BAR</string>

    <string name="info_duchas_si">The Beach has SHOWER</string>
    <string name="info_duchas_no">The Beach does NOT have SHOWER</string>

    <string name="info_rompeolas_si">The Beach has BREAKWATER</string>
    <string name="info_rompeolas_no">The Beach does NOT have BREAKWATER</string>

    <string name="info_sombrillas_si">The Beach has UMBRELLAS</string>
    <string name="info_sombrillas_no">The Beach does NOT have UMBRELLAS</string>

    <string name="info_socorrista_si">The Beach has LIFE GUARD</string>
    <string name="info_socorrista_no">The Beach does NOT have LIFE GUARD</string>

    <string name="procesando_espere">Processing... Wait Please...</string>

    <string name="title_section_images_beach">Photos</string>
    <string name="title_choose_image">Select an Option</string>
    <string name="description_choose_image">Where do you want to select the image?</string>
    <string name="choose_gallery">Gallery</string>
    <string name="choose_camera">Take a Picture</string>
    <string name="upload_ok">You have UPLOADED THE PICTURE SUCCESSFULLY!</string>
    <string name="upload_photo">Add New Picture!</string>
    <string name="update_pictures">Reload Pictures</string>

    <string name="no_photos">Be the first to ADD A PICTURE!</string>

    <string name="no_gps_title">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="go_to_gps">Go to Enable GPS</string>

    <string name="access_no_login"><u>Login as Anonymous</u></string>
    <string name="need_login">You NEED to Log In to perform that action</string>
    <string name="anonymous">Anonymous</string>
    <string name="no_login">You are NOT Logged</string>
    <string name="login">Go to Log In</string>
    <string name="cancel">Cancel</string>

    <string name="title_perros">Dog Friendly Beach?</string>
    <string name="info_perros_si">Dog Friendly Beach</string>
    <string name="info_perros_no">On the Beach does NOT allow Dogs</string>

    <string name="title_cerrada">Is the Beach is now Open?</string>
    <string name="info_cerrada">The Beach is currently Closed</string>
    <string name="title_nudista">Is a Beach for Nudists?</string>
    <string name="info_nudista_si">The Beach is for Nudists</string>
    <string name="info_nudista_no">On the Beach does NOT allow Nudists</string>


    <string name="share">Share On Facebook</string>
    <string name="url_share">https://play.google.com/store/apps/details?id=com.odc.beachodc</string>
    <string name="title_share">I\'m at the Beach</string>
    <string name="subtitle_share">Exploring Beaches with Shorcial!</string>
    <string name="temp_fail">Relaxing day :)</string>
    <string name="content_share_0">We are at</string>
    <string name="content_share_1">:)</string>
    <string name="share_fb">It successfully shared on Facebook</string>

</resources>