<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.andexert.library.RippleView
        android:id="@+id/mapBTNR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        ripple:rv_centered="true">

        <Button
            android:id="@+id/mapBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffed6a"
            android:textStyle="bold"
            android:background="@drawable/background_boton"
            android:text="@string/ver_mapa"/>

    </com.andexert.library.RippleView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_below="@+id/mapBTNR"
        android:layout_above="@+id/recargarBTNR"
        android:background="@drawable/background_title_checkins">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/noplayas"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/no_playas"
            android:layout_centerInParent="true" />

        <ListView
            android:id="@+id/listaPlayas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10sp">

        </ListView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/layoutMapa">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="com.google.android.gms.maps.SupportMapFragment"/>

        </RelativeLayout>

    </RelativeLayout>

    <com.andexert.library.RippleView
        android:id="@+id/recargarBTNR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        ripple:rv_centered="true">

        <Button
            android:id="@+id/recargarBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffed6a"
            android:textStyle="bold"
            android:background="@drawable/background_boton"
            android:text="@string/touch_reload"/>

    </com.andexert.library.RippleView>


</RelativeLayout>
