<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.andexert.library.RippleView
        android:id="@+id/uploadBTNR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_alignParentTop="true"
        ripple:rv_centered="true">

        <Button
            android:id="@+id/uploadBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffed6a"
            android:textStyle="bold"
            android:background="@drawable/background_boton"
            android:text="@string/upload_photo"/>

    </com.andexert.library.RippleView>

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:layout_below="@+id/uploadBTNR"
        android:layout_above="@+id/relativeLayout2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:layout_above="@+id/updateBTNR"
        android:background="@drawable/background_fragments"
        android:id="@+id/relativeLayout2">

        <com.facebook.widget.ProfilePictureView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/com_facebook_profile_default_icon"
            app:preset_size="small"
            android:id="@+id/fotoAutorImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nombreAutorTV"
            android:textSize="18sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_toRightOf="@+id/fotoAutorImage"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_above="@+id/updateBTNR"
        android:layout_below="@+id/uploadBTNR"
        android:background="@drawable/background_fragments"
        android:id="@+id/no_photos">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cargandoTV"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:ellipsize="end"
            android:text="@string/no_photos"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <com.andexert.library.RippleView
        android:id="@+id/updateBTNR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        ripple:rv_centered="true">

        <Button
            android:id="@+id/updateBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffed6a"
            android:textStyle="bold"
            android:background="@drawable/background_boton"
            android:text="@string/update_pictures"/>

    </com.andexert.library.RippleView>

</RelativeLayout>


